...

extension SignupViewController: SignupViewDelegateProtocol {
    func successfulSignup() {
        let alertController = UIAlertController(title: "Success", message: "The signup opertaion was successful", preferredStyle: .alert)
        alertController.addAction(UIAlertAction(title: "Ok", style: .default, handler: nil))
        DispatchQueue.main.async {
            alertController.view.accessibilityIdentifier = "successAlertDialog"
            self.present(alertController, animated: true, completion: nil)
        }
    }
    
    func errorHandler(error: SignupError) {
        let alertController = UIAlertController(title: "Error", message: "Your request could not be processed at this time", preferredStyle: .alert)
        
        alertController.addAction(UIAlertAction(title: "Ok", style: .default, handler: nil))
        
        DispatchQueue.main.async {
            alertController.view.accessibilityIdentifier = "errorAlertDialog"
            self.present(alertController, animated: true, completion: nil)
        }
    }
    
    
}
...
